--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "lodash.isempty": "^4.4.0",
     "lodash.times": "^4.3.2",
     "opencollective": "^1.0.3",
-    "prop-types": "^15.5.8"
+    "prop-types": "^15.5.8",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "babel": "^6.23.0",
@@ -65,6 +67,7 @@
     "react-native": "0.52.2",
     "react-native-vector-icons": "^4.4.2",
     "react-test-renderer": "16.2.0",
+    "redux-logger": "^3.0.6",
     "webpack": "^2.2.1"
   },
   "peerDependencies": {
